Fix ui bug on mobile viewport

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10907,6 +10907,7 @@ a.text-dark:focus {
 html,
 body {
   height: 100%;
+  width: 100%;
   margin: 0;
 }
 
